<resources>
    <string name="app_name">Date counter</string>
    <string name="configuration_title">Configuration</string>
    <string name="select_date">Choose date</string>
    <string name="select_hour">Choose hour</string>
    <string name="save_selection">Add widget</string>
    <string name="widget_title">Count days</string>
    <string name="event_title">Event title</string>
    <string name="event_days">3</string>
    <string name="event_distance">days ago</string>
    <string name="event_description">Description</string>
    <string name="alert_title">Title cannot be empty</string>
    <string name="default_hour" translatable="false">16:00</string>
    <string name="default_date" translatable="false">2001-09-11</string>

    <string name="event_today">Today</string>
    <plurals name="event_future">
        <item quantity="one">day left</item>
        <item quantity="other">days left</item>
    </plurals>
    <plurals name="event_past">
        <item quantity="one">day ago</item>
        <item quantity="other">days ago</item>
    </plurals>
</resources>